--- a/index.html
+++ b/index.html
@@ -676,11 +676,10 @@
             <div class="hero-content">
                 <h1>Your Smart Plant Health Assistant</h1>
                 <p>Identify diseases, get tailored plant care advice, and connect with gardeners worldwide. Growing healthy plants has never been easier!</p>
-                
+                <a href="login.html">
                 <div class="hero-buttons">
-                    <button class="btn" id="identifyBtn">Identify Plant Issue</button>
-                    <button class="btn btn-secondary">Browse Plant Library</button>
-                </div>
+                    <button class="btn" id="identifyBtn">SignUp / SignIn</button>
+                </div></a>
             </div>
         </div>
     </section>
